added grid and button

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+<meta charset="UTF-8"> 
 <title>jQuery Sketch</title>
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -10,7 +11,7 @@
 </head>
 
 <body>
-
+	<button>Clear Grid</button><br><br>
 </body>
 
 </html>
